--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -2,11 +2,14 @@
     <header class="header">
         <h2>Adicione um <br>pensamento novo:</h2>
     </header>
-    <form>
+    <form [formGroup]="formulario">
         <label for="pensamento">Pensamento</label>
-        <input type="textarea" class="input" id="pensamento" name="pensamento" placeholder="Digite o pensamento" [(ngModel)]="pensamento.conteudo">
+        <input type="textarea" class="input" id="pensamento" formControlName="conteudo" placeholder="Digite o pensamento">
+        <div class="mensagem__erro" *ngIf="formulario.get('conteudo')?.errors && formulario.get('conteudo')?.touched">Pensamento é obrigatório!</div>
         <label for="autoria">Autoria ou fonte</label>
-        <input type="texta" class="input" id="autoria" name="autoria" placeholder="Digite a autoria ou fonte" [(ngModel)]="pensamento.autoria">
+        <input type="texta" class="input" id="autoria" formControlName="autoria" placeholder="Digite a autoria ou fonte">
+        <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['required'] && formulario.get('autoria')?.touched">Autoria é obrigatória!</div>
+        <div class="mensagem__erro" *ngIf="formulario.get('autoria')?.errors?.['minlength'] && formulario.get('autoria')?.touched">Autoria precisa ter no minimo 3 caracteres!</div>
         <label for="modelo">Selecione o modelo do card</label>
         <div class="container-radio">
             <div class="radio-modelo">
@@ -14,8 +17,7 @@
                     <input type="radio"
                     id="modelo1"
                     value="modelo1"
-                    name="modelo-card"
-                    [(ngModel)]="pensamento.modelo">
+                    formControlName="modelo">
                     <div class="custom-radio">
                         <span></span>
                     </div>
@@ -24,8 +26,8 @@
                 Prévia:
                 <div class="modelo modelo1 ff-roboto-mono">
                     <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-                    <p class="conteudo">{{ pensamento.conteudo }}</p>
-                    <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+                    <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+                    <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
                 </div>
             </div>
             <div class="radio-modelo">
@@ -33,8 +35,7 @@
                     <input type="radio"
                     id="modelo2"
                     value="modelo2"
-                    name="modelo-card"
-                    [(ngModel)]="pensamento.modelo">
+                    formControlName="modelo">
                     <div class="custom-radio">
                         <span></span>
                     </div>
@@ -43,8 +44,8 @@
                 Prévia:
                 <div class="modelo modelo2 ff-roboto-mono">
                     <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
-                    <p class="conteudo">{{ pensamento.conteudo }}</p>
-                    <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+                    <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+                    <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
                 </div>
             </div>
             <div class="radio-modelo">
@@ -52,8 +53,7 @@
                     <input type="radio"
                     id="modelo3"
                     value="modelo3"
-                    name="modelo-card"
-                    [(ngModel)]="pensamento.modelo">
+                    formControlName="modelo">
                     <div class="custom-radio">
                         <span></span>
                     </div>
@@ -62,13 +62,13 @@
                 Prévia:
                 <div class="modelo modelo3 ff-roboto-mono">
                     <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verdes">
-                    <p class="conteudo">{{ pensamento.conteudo }}</p>
-                    <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
+                    <p class="conteudo">{{ formulario.get('conteudo')?.value }}</p>
+                    <p class="autoria"><b>{{ formulario.get('autoria')?.value }}</b></p>
                 </div>
             </div>
         </div>
         <div class="acoes">
-            <button (click)="criarPensamento()" class="botao">Salvar</button>
+            <button [disabled]="!formulario.valid" (click)="criarPensamento()" [ngClass]="habilitarBotao()" >Salvar</button>
             <button  (click)="cancelarPensamento()" class="botao">Cancelar</button>
         </div>
     </form>
