--- a/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/listar-pensamento/listar-pensamento.component.html
@@ -9,7 +9,7 @@
         [(ngModel)]="filtro"
         (keyup)="pesquisarPensamentos()"
       >
-      <img src="/src/assets/imagens/lupa.png" alt="Lupa azul">
+      <img src="/assets/imagens/lupa.png" alt="Lupa azul">
     </div>
     <h2 class="ff-inter">Meu Mural</h2>
     <button routerLink="/criarPensamento" class="botao">Adicionar pensamento</button>
